<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@drawable/card_new_background"
    android:layout_marginBottom="8dp"
    android:elevation="2dp"
    android:gravity="center_vertical">

    <CheckBox
        android:id="@+id/cb_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/tv_habit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit_name1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_habit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit_description"
            android:textSize="12sp"
            android:textColor="@color/text_color2"
            android:layout_marginTop="2dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@android:drawable/ic_menu_edit"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@android:drawable/ic_delete"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/delete" />

</LinearLayout>