<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/card_background"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_s_progress_widget"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#240C50" />

    <TextView
        android:id="@+id/widget_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/percenatge2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/txt_color3" />

    <TextView
        android:id="@+id/widget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0_habits"
        android:textSize="12sp"
        android:textColor="@color/text_color2" />

    <ProgressBar
        android:id="@+id/widget_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:progress="0"
        android:max="100"
        android:progressTint="@color/txt_color7" />

</LinearLayout>