<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Footer Navigation -->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/footer_gradient"
            android:gravity="center"
            android:orientation="horizontal">

        <!-- Home -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homeIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="Home"
                android:src="@drawable/ic_home"
                android:padding="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@android:color/white"
                android:textSize="11sp"
                android:fontFamily="sans-serif-medium" />
        </LinearLayout>

        <!-- Habits -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/habitsIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="Habits"
                android:src="@drawable/ic_habit2"
                android:padding="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habits"
                android:textColor="@android:color/white"
                android:textSize="11sp"
                android:fontFamily="sans-serif-medium" />
        </LinearLayout>

        <!-- Mood -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/moodIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="Mood"
                android:src="@drawable/ic_mood3"
                android:padding="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood"
                android:textColor="@android:color/white"
                android:textSize="11sp"
                android:fontFamily="sans-serif-medium" />
        </LinearLayout>

        <!-- reminders -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/settingsIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="Settings"
                android:src="@drawable/ic_water1"
                android:padding="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminders"
                android:textColor="@android:color/white"
                android:textSize="11sp"
                android:fontFamily="sans-serif-medium" />
        </LinearLayout>

            <!-- profile -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profileIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="Steps"
                    android:src="@drawable/ic_profile"
                    android:padding="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textColor="@android:color/white"
                    android:textSize="11sp"
                    android:fontFamily="sans-serif-medium" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>